# livepaint

./: .gitignore  README.md
agent/: .dockerignore  Dockerfile  drawings.py  fly.toml  game.py  game_host.py  livekit.toml  main.py  prompts.py  pyproject.toml  requirements.txt
web/: .prettierignore  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/connection-details/: route.ts
web/components/: BSOD.tsx  Canvas.tsx  ConnectionForm.tsx  CustomPromptWindow.tsx  GameControls.tsx  HelpWindow.tsx  PlayerTile.tsx  PlayersList.tsx  Window.tsx  WinnerWindow.tsx
web/lib/: drawings.ts
web/providers/: GameProvider.tsx  UrlRoomNameProvider.tsx
