[project]
name = "livepaint-agent"
version = "1.0.0"
description = "Realtime drawing game host agent built on LiveKit Agents"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents~=1.5",
    "livekit-api~=1.1",
    "pillow~=12.0",
    "python-dotenv~=1.1",
]

[dependency-groups]
dev = [
    "ruff~=0.14",
]

# This is an application rather than a packaged library, so it is not built or
# installed into the environment — uv just manages its dependencies.
[tool.uv]
package = false

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true
